--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,14 @@
 [package]
 name = "conquer-pointer"
 version = "0.1.0"
-authors = ["oliver-giersch <oliver.giersch@googlemail.com>"]
+authors = ["Oliver Giersch"]
+license = "MIT/Apache-2.0"
+readme = "README.md"
+repository = "https://github.com/oliver-giersch/conquer-util.git"
+documentation = "https://docs.rs/conquer-util"
+keywords = ["pointer", "tagging", "concurrent", "no_std"]
 edition = "2018"
-
-[features]
-nightly = []
+exclude = [".travis.yml"]
 
 [dependencies]
 typenum = "1.10.0"
