fixes build using 'nightly' feature

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,8 @@ keywords = ["pointer", "tagging", "concurrent", "no_std"]
 edition = "2018"
 exclude = [".travis.yml"]
 
+[features]
+nightly = []
+
 [build-dependencies]
 cc = "1.0.50"
