--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,13 +1,14 @@
-name: conquer-pointer tests
+name: tagptr tests
 on:
   push:
-    branches: [ master ]
-    tags: [ v0.* ]
+    branches: [master]
+    tags: [v*]
   pull_request:
-    branches: [ master ]
+    branches: [master]
 
 env:
   CARGO_TERM_COLOR: always
+  FIXED_NIGHTLY: nightly-2021-07-09
 
 jobs:
   test:
@@ -15,7 +16,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ ubuntu-latest, macos-latest, windows-latest ]
+        os: [ubuntu-latest, macos-latest, windows-latest]
     steps:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
@@ -25,7 +26,21 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: test
-      - uses: actions-rs/cargo@v1
+  miri:
+    name: cargo miri test
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
         with:
-          command: test
-          args: --features nightly
+          toolchain: ${{ env.FIXED_NIGHTLY }}
+          override: true
+      - name: install miri
+        run: |
+          rustup component add miri
+          cargo miri setup
+      - name: miri
+        run: cargo miri test
