--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,12 @@
 [package]
-name = "conquer-pointer"
+name = "tagptr"
 version = "0.2.0"
 authors = ["Oliver Giersch"]
 license = "MIT/Apache-2.0"
 readme = "README.md"
-repository = "https://github.com/oliver-giersch/conquer-pointer.git"
-documentation = "https://docs.rs/conquer-pointer"
+repository = "https://github.com/oliver-giersch/tagptr.git"
+documentation = "https://docs.rs/tagptr"
 keywords = ["pointer", "tagging", "concurrency"]
 categories = ["no-std"]
 edition = "2018"
 exclude = [".github/"]
-
-[build-dependencies]
-cc = "1.0.62"
